# NistBeaconUbuntu

./: .gitignore  CMakeLists.txt  COPYRIGHT  README.md  manifest.json.in
app/: CMakeLists.txt  nist-random-beacon.desktop.in  nist-random-beacon.qml
backend/: CMakeLists.txt
backend/modules/Beacon/: plugin.cc  plugin.h  qmldir  request-result.cc  request-result.h  request.cc  request.h
po/: com.ubuntu.developer.abreu-alexandre.nist-random-beacon.pot  nist-random-beacon.desktop.in.h
